kubernetes/sysutils/dhcp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: dhcp
    service: sysutil
  name: dhcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dhcp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dhcp
        service: sysutil
    spec:
      containers:
      - image: networkboot/dhcpd
        #- image: nginx
        name: dhcpd
        resources: {}
        volumeMounts:
        - name: config
          mountPath: "/data"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: dhcp
      securityContext:
        fsGroupChangePolicy: "OnRootMismatch"
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: dhcp
    service: sysutil
  name: dhcp
spec:
  type: LoadBalancer
  loadBalancerIP: 10.1.250.2
  externalTrafficPolicy: Local
  ports:
    #- name: client
    #port: 68
    #protocol: UDP
    #targetPort: 68
  - name: server
    port: 67
    protocol: UDP
    targetPort: 67
  selector:
    app: dhcp
status:
  loadBalancer: {}
