kubernetes/sysutils/fileserve.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: fileserve
  name: fileserve
  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fileserve
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fileserve
    spec:
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: fileserve-longhorn
      containers:
      - image: nginx
        name: fileserve
        resources: {}
        volumeMounts:
        - name: config
          mountPath: "/etc/nginx"
          subPath: "config"
        - name: config
          mountPath: "/var/www/html"
          subPath: "share"
      dnsConfig:
        options:
        - name: ndots
          value: "1"
        - name: single-request-reopen
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: fileserve
  name: fileserve
spec:
  ports:
  - name: web
    protocol: TCP
    port: 80
  selector:
    app: fileserve
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fileserve-ingress
spec:
  rules:
  - host: fileserve.k8s.jnet.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fileserve
            port:
              name: web
