kubernetes/sysutils/frigate.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frigate
    service: sysutil
  name: frigate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frigate
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frigate
        service: sysutil
    spec:
      containers:
        - image: ghcr.io/blakeblackshear/frigate:stable
        name: frigate
        resources: {}
        volumeMounts:
        - name: nfs
          mountPath: "/media"
        - name: config
          mountPath: "/config"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: frigate
      - name: nfs
        persistentVolumeClaim:
          claimName: nfs-nvr
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: frigate
    service: sysutil
  name: frigate
spec:
  type: LoadBalancer
  loadBalancerIP: 10.1.250.4
  externalTrafficPolicy: Local
  ports:
  - name: web
    port: 5000
    protocol: TCP
    targetPort: 5000
  - name: rtsp
    port: 8554
    protocol: TCP
    targetPort: 8554
  - name: webrtc_udp
    port: 8555
    protocol: UDP
    targetPort: 8555
  - name: webrtc_tcp
    port: 8555
    protocol: TCP
    targetPort: 8555
  selector:
    app: frigate
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-ingress
spec:
  rules:
  - host: frigate.k8s.bnet.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frigate
            port:
              name: web
