kubernetes/sysutils/openspeedtest.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-ingress
spec:
  rules:
  - host: speedtest.k8s.bnet.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openspeedtest
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-public
spec:
  rules:
  - host: speedtest.us.gonnella.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openspeedtest
            port:
              number: 3000
