kubernetes/sysutils/wireguard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  labels:
    app: wireguard
    service: sysutil
spec:
  selector:
    matchLabels:
      name: wireguard
  template:
    metadata:
      labels:
        name: wireguard
        service: sysutil
    spec:
      securityContext:
        sysctls:
        - name: net.ipv4.conf.all.src_valid_mark
          value: "1"
        - name: net.ipv4.ip_forward
          value: "1"
      containers:
        - name: "wireguard"
          image: "weejewel/wg-easy"
          volumeMounts:
            - name: config
              mountPath: /etc/wireguard
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
      volumes:
        - name : config
          persistentVolumeClaim:
            claimName: wireguard-longhorn
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard
  labels:
    app: wireguard
    service: sysutil
spec:
  type: LoadBalancer
  loadBalancerIP: 10.81.4.4
  externalTrafficPolicy: Local
  ports:
    - name: wireguard
      port: 51820
      protocol: UDP
  selector:
    name: wireguard
---
apiVersion: v1
kind: Service
metadata:
  name: wg-easy
  labels:
    app: wireguard
    service: sysutil
spec:
  ports:
    - name: web
      port: 51821
      protocol: TCP
  selector:
    name: wireguard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wireguard-ingress
spec:
  rules:
  - host: wireguard.k8s.jnet.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wg-easy
            port:
              name: web
